[fix] momentum scroll on ios

--- a/src/sass/module/_nav.sass
+++ b/src/sass/module/_nav.sass
@@ -13,6 +13,7 @@
   white-space: nowrap
   overflow-x: scroll
   overflow-y: hidden
+  -webkit-overflow-scrolling: touch;
   margin-bottom: -$space
   padding-bottom: $space
   padding-left: $layout-gutter-sm
